--- a/index.html
+++ b/index.html
@@ -1,43 +1,4 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -49,10 +10,17 @@
     <div class="container mx-auto p-4 max-w-4xl">
         <h1 class="text-3xl font-bold text-center mb-6">USDJPY Trading Journal</h1>
 
-        <!-- Balance Input -->
-        <div class="mb-4">
-            <label class="block text-lg font-medium mb-2">Current Balance (USD):</label>
-            <input type="number" id="balance" value="100" step="0.01" class="w-full p-2 border rounded">
+        <!-- Balance and Risk Info -->
+        <div class="flex flex-col md:flex-row md:items-center md:space-x-4 mb-6">
+            <div class="mb-4 md:mb-0">
+                <label class="block text-lg font-medium mb-2">Current Balance (USD):</label>
+                <input type="number" id="balance" value="100" step="0.01" class="w-full p-2 border rounded">
+            </div>
+            <div class="bg-white p-4 rounded shadow">
+                <h3 class="text-lg font-semibold mb-2">Trade Parameters</h3>
+                <p>Risk Percentage: <span id="risk-percent" class="font-bold">20.0%</span></p>
+                <p>Lot Size: <span id="lot-size" class="font-bold">0.15</span></p>
+            </div>
         </div>
 
         <!-- Checklist Screen -->
@@ -155,10 +123,38 @@
         let tradeStartTime = null;
         let currentBalance = parseFloat(document.getElementById('balance').value);
 
-        // Update balance input
+        // Update balance input and trade parameters
         document.getElementById('balance').addEventListener('change', () => {
             currentBalance = parseFloat(document.getElementById('balance').value);
+            updateTradeParameters();
         });
+
+        // Get risk percentage
+        function getRiskPercent(tradeNumber) {
+            if (tradeNumber <= 40) return 0.20;
+            else if (tradeNumber == 41) return 0.186;
+            else if (tradeNumber == 42) return 0.157;
+            else if (tradeNumber == 43) return 0.136;
+            else if (tradeNumber == 44) return 0.119;
+            else if (tradeNumber == 45) return 0.107;
+            else if (tradeNumber == 46) return 0.096;
+            else if (tradeNumber == 47) return 0.088;
+            else if (tradeNumber == 48) return 0.081;
+            else if (tradeNumber == 49) return 0.075;
+            else return 0.070;
+        }
+
+        // Update trade parameters display
+        function updateTradeParameters() {
+            const trades = JSON.parse(localStorage.getItem('trades') || '[]');
+            const tradeNumber = trades.length + 1;
+            const riskPercent = getRiskPercent(tradeNumber);
+            const riskAmount = currentBalance * riskPercent;
+            const lotSize = Math.min(riskAmount / 200, currentBalance / 200, 200);
+
+            document.getElementById('risk-percent').textContent = `${(riskPercent * 100).toFixed(1)}%`;
+            document.getElementById('lot-size').textContent = lotSize.toFixed(2);
+        }
 
         // Set checklist value
         function setChecklist(key, value) {
@@ -180,21 +176,6 @@
             const trades = JSON.parse(localStorage.getItem('trades') || '[]');
             const today = new Date().toISOString().split('T')[0];
             return trades.filter(trade => trade.date.split(', ')[0].split('/').reverse().join('-').includes(today)).length;
-        }
-
-        // Get risk percentage
-        function getRiskPercent(tradeNumber) {
-            if (tradeNumber <= 40) return 0.20;
-            else if (tradeNumber == 41) return 0.186;
-            else if (tradeNumber == 42) return 0.157;
-            else if (tradeNumber == 43) return 0.136;
-            else if (tradeNumber == 44) return 0.119;
-            else if (tradeNumber == 45) return 0.107;
-            else if (tradeNumber == 46) return 0.096;
-            else if (tradeNumber == 47) return 0.088;
-            else if (tradeNumber == 48) return 0.081;
-            else if (tradeNumber == 49) return 0.075;
-            else return 0.070;
         }
 
         // Submit checklist
@@ -286,6 +267,7 @@
             document.getElementById('screenshot').value = '';
 
             loadTrades();
+            updateTradeParameters();
         }
 
         // Load trades
@@ -331,11 +313,13 @@
                 });
                 localStorage.setItem('trades', JSON.stringify(trades));
                 loadTrades();
+                updateTradeParameters();
             }
         }
 
         // Initial load
         loadTrades();
+        updateTradeParameters();
     </script>
 </body>
 </html>
